--- a/packages/components/Radio/example/Example.html
+++ b/packages/components/Radio/example/Example.html
@@ -7,7 +7,7 @@
 
   <h4>Selecionado</h4>
   <div class="row">
-    <Radio checked />
+    <Radio checked on:click="console.log(event)" on:change="console.log(event)"/>
   </div>
 
 </div>
