fix: 🐛 fixed bad typing from last commit

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -1,8 +1,7 @@
 <div class="carousel">
 
   {#each slides as slide, index}
-    <!-- <input type="radio" name="images" id={`slide${index+1}`} checked={index === 0}> -->
-    <input type="radio" name="images" id={`slide${index+1}`} checked="true">
+    <input type="radio" name="images" id={`slide${index+1}`} checked={index === 0}>
   {/each}
 
   <div class="wrapper">
