--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -14,7 +14,6 @@
   on:submitInvalid="_onSubmitInvalid()"
 />
 
-
 <script>
   import Keyboard from '@mamba/pos/api/keyboard.js';
   import { format as formatMoney } from '@mamba/utils/money.js';
@@ -30,6 +29,7 @@
         suffix: '',
         limit: 99999999.99,
         validation: undefined,
+        readonlyOnEnter: false,
       };
     },
     computed: {
@@ -83,6 +83,16 @@
         /* istanbul ignore next */
         this.refs.amountInput.blur();
       },
+      makeWritable() {
+        this.set({
+          readonly: false,
+        });
+      },
+      makeReadOnly() {
+        this.set({
+          readonly: true,
+        });
+      },
       _onFocus(e) {
         const { value } = this.get();
         const endPosition = value.length;
@@ -117,15 +127,20 @@
         this.fire('submit', this._getSubmissionObj());
       },
       _onKeydown(e) {
+
+        e.preventDefault();
+        const keyName = Keyboard.getKeyName(e.keyCode);
+        const { readonlyOnEnter } = this.get();
+        let { cents } = this.get();
+        cents = cents.toString();
+
         if (this.get().readonly === true) {
           return;
         }
 
-        e.preventDefault();
-        let { cents } = this.get();
-        cents = cents.toString();
-
-        const keyName = Keyboard.getKeyName(e.keyCode);
+        if (readonlyOnEnter === true && cents !== '0' && keyName === 'enter') {
+          this.makeReadOnly();
+        }
 
         if (Keyboard.isNumericKey(e.keyCode)) {
           if (cents === '0') {
