--- a/packages/components/Radio/Radio.html
+++ b/packages/components/Radio/Radio.html
@@ -1,7 +1,7 @@
 <label>
   <input
     type="radio"
-    {name}
+    name={name ? name : 'radio'}
     {checked}
     on:change="fire('change')"
     on:click="fire('click')"
@@ -14,16 +14,11 @@
     data() {
       return {
         checked: false,
-        name: name || 'radio'
       };
     },
     methods: {
       toggle(value) {
-        if (value === true) {
-          this.set({ checked: true });
-        } else if (value === false) {
-          this.set({ checked: false });
-        }
+        this.set({ checked: value });
       },
     },
   };
