refactor: 💡 removed global from Carousel arrows

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -107,7 +107,8 @@
   right: 0;
 }
 
-:global(.prev .icon, .next .icon) {
+.prev .icon,
+.next .icon {
   line-height: 32px;
   text-align: center;
 }
