--- a/packages/components/Container/Container.html
+++ b/packages/components/Container/Container.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding: {padding};">
   <slot></slot>
 </div>
 
@@ -6,14 +6,8 @@
   export default {
     data() {
       return {
-        padding: '10',
+        padding: '10px',
       };
     },
   };
 </script>
-
-<style type="text/postcss">
-  .container {
-    padding: 10px;
-  }
-</style>
