--- a/packages/components/Container/example/Example.html
+++ b/packages/components/Container/example/Example.html
@@ -1,8 +1,14 @@
 <Container>
-  Conteúdo
+  Espaçamento padrão <strong>10px</strong>
 </Container>
 
-</div>
+<Container>
+  Espaçamento customizado com escrita CSS <strong>0 20px</strong>
+</Container>
+
+<Container>
+  Espaçamento com outros valores <strong>1em</strong>
+</Container>
 
 <style>
   :global(body) {
