--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -72,6 +72,11 @@
   <div class="row">
     <MoneyInput cents="100" label="DINHEIRO" on:submit="console.log(event)" />
   </div>
+
+  <h4>Input com Keyboard</h4>
+  <div class="row">
+    <KeyboardInput />
+  </div>
 </div>
 
 <style>
@@ -101,6 +106,7 @@
   export default {
     components: {
       Input: '@mamba/input/Input.html',
+      KeyboardInput: '@mamba/input/Text.html',
       MoneyInput: '@mamba/input/Money.html',
     },
     data() {
