--- a/packages/components/Tabs/Tabs.html
+++ b/packages/components/Tabs/Tabs.html
@@ -40,6 +40,7 @@
         this.refs.container.children,
         element =>
           element.classList.contains('tab-pane') &&
+          element.attributes.label &&
           element.attributes.label.value !== 'undefined',
       );
 
