fix: 🐛 It has been fixed height row's component

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -7,7 +7,7 @@ $app-bg-color: $gray-lighter;
 
 /** Row component */
 $row-padding: 12px 15px;
-$row-top-height: 20px;
+$row-top-height: auto;
 $row-border-color: $gray-lighter;
 $row-bg-color: $white;
 $row-primary-color: $gray-darker;
@@ -40,10 +40,6 @@ $switch-checked-bg: $stone-green-light;
 $switch-checked-color: $green;
 $switch-disabled-bg: $silver-light;
 $switch-disabled-color: $silver;
-
-$radio-checked-border: $green;
-$radio-checked-color: $green;
-$radio-unchecked-border: $gray;
 
 /* Tabs component */
 $tab-navigation-bg: #f2f2f2;
