refactor: 💡 Renamed Keyboard component to Keyboard.html

--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -106,7 +106,7 @@
   export default {
     components: {
       Input: '@mamba/input/Input.html',
-      KeyboardInput: '@mamba/input/Text.html',
+      KeyboardInput: '@mamba/input/Keyboard.html',
       MoneyInput: '@mamba/input/Money.html',
     },
     data() {
