--- a/packages/components/Tabs/TabPane.html
+++ b/packages/components/Tabs/TabPane.html
@@ -1,3 +1,3 @@
-<div class="tab-pane" data-label="{label}" hidden="{true}" data-route="{route}">
+<div class="tab-pane" data-label="{title}" hidden="{true}" data-route="{route}">
   <slot></slot>
 </div>
