--- a/packages/components/Carousel/example/Example.html
+++ b/packages/components/Carousel/example/Example.html
@@ -20,9 +20,8 @@
     font-weight: bold;
   }
 
-  .container {
-    max-width: 80%;
-    width: 700px;
+  .Code-run.svelte-1jfjrz6 .container.svelte-57cckp {
+    width: 300px;
     margin: 80px auto;
   }
 
