CAROUSEL: updated example docs

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -107,8 +107,8 @@
   right: 0;
 }
 
-.prev .icon,
-.next .icon {
+:global(.carousel .prev .icon,
+.carousel .next .icon) {
   line-height: 32px;
   text-align: center;
 }
