--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -6,14 +6,15 @@
     </button>
   </div>
 
-  <Dialog ref:defaultDialog
+  <dialog
+    ref:defaultDialog
     on:open="console.log('on:open')"
     on:close="console.log('on:close')"
   >
     Dialog Padrão
-  </Dialog>
+  </dialog>
 
-  <h4>Com Promise </h4>
+  <h4>Com Promise</h4>
   <div class="row">
     <button on:click="refreshPromise()">
       Initialize promise
@@ -25,13 +26,8 @@
     on:success="console.log('promise success', event)"
     on:failure="console.log(event)"
   >
-    {#await promise}
-      Loading...
-    {:then }
-      Success!!!
-    {:catch }
-      Something went wrong...
-    {/await}
+    {#await promise} Loading... {:then } Success!!! {:catch } Something went
+    wrong... {/await}
   </PromisedDialog>
 
   <h4>Com botões de confirmação</h4>
@@ -48,7 +44,8 @@
     </button>
   </div>
 
-  <ConfirmationDialog ref:confirmationDialog
+  <ConfirmationDialog
+    ref:confirmationDialog
     title="IMPRESSORA SEM PAPEL"
     on:negative="console.log('on:negative')"
     on:positive="console.log('on:positive')"
@@ -56,7 +53,8 @@
     Tentar imprimir novamente?
   </ConfirmationDialog>
 
-  <ConfirmationDialog ref:confirmationDialogLabelled
+  <ConfirmationDialog
+    ref:confirmationDialogLabelled
     title="INTERROMPER?"
     positiveLabel="Não"
     negativeLabel="Interromper"
@@ -65,6 +63,21 @@
   >
     Tentar imprimir novamente?
   </ConfirmationDialog>
+
+  <h4>Pop-up</h4>
+  <div class="row">
+    <button on:click="openPopUp('defaultPopUp')">
+      Open dialog
+    </button>
+  </div>
+
+  <dialog
+    ref:defaultPopUp
+    on:open="console.log('on:open Pop-up')"
+    on:close="console.log('on:close Pop-up')"
+  >
+    Pop-up Padrão
+  </dialog>
 </div>
 
 <script>
@@ -82,6 +95,9 @@
       },
       openDialog(dialog, delay) {
         this.refs[dialog].open(delay);
+      },
+      openPopUp() {
+        this.refs.defaultPopUp.open();
       },
     },
   };
