feat: 🎸 Included Blank brand (default)

--- a/packages/components/Brands/Brands.html
+++ b/packages/components/Brands/Brands.html
@@ -3,6 +3,7 @@
 <script>
   import alelo from './assets/alelo.png'
   import amex from './assets/amex.png'
+  import blank from './assets/blank.png'
   import cabal from './assets/cabal.png'
   import cooperCard from './assets/cooper-card.png'
   import dinersClub from './assets/diners-club.png'
@@ -61,7 +62,7 @@
           case 'vr':
             return vr
           default:
-            return verdecard
+            return blank
         }
       },
     },
