feat: 🎸 included more brands

--- a/packages/components/Brands/Brands.html
+++ b/packages/components/Brands/Brands.html
@@ -3,6 +3,8 @@
 <script>
   import alelo from './assets/alelo.png'
   import amex from './assets/amex.png'
+  import banescard from 'banescard.png'
+  import benVisaVale from 'ben-visa-vale.png'
   import blank from './assets/blank.png'
   import cabal from './assets/cabal.png'
   import cooperCard from './assets/cooper-card.png'
@@ -12,10 +14,14 @@
   import hiper from './assets/hiper.png'
   import hipercard from './assets/hipercard.png'
   import mastercard from './assets/mastercard.png'
-  import senff from './assets/senff.svg'
+  import redecompras from 'redecompras.png';
+  import senff from './assets/senff.png'
   import sodexo from './assets/sodexo.png'
-  import ticket from './assets/ticket.svg'
+  import sorocred from 'sorocred.png';
+  import ticket from './assets/ticket.png'
+  import unionpay from 'unionpay.png';
   import up from './assets/up.png'
+  import valecard from 'valecard.png';
   import verdecard from './assets/verdecard.png'
   import verocard from './assets/verocard.png'
   import visa from './assets/visa.png'
@@ -29,6 +35,10 @@
             return alelo
           case 'amex':
             return amex
+          case 'banescard':
+            return banescard
+          case 'benvisavale':
+            return benVisaVale
           case 'cabal':
             return cabal
           case 'coopercard':
@@ -45,14 +55,22 @@
             return hipercard
           case 'mastercard':
             return mastercard
+          case 'redecompras':
+            return redecompras
           case 'senff':
             return senff
           case 'sodexo':
             return sodexo
+          case 'sorocred':
+            return sorocred
           case 'ticket':
             return ticket
+          case 'unionpay':
+            return unionpay
           case 'up':
             return up
+          case 'valecard':
+            return valecard
           case 'verdecard':
             return verdecard
           case 'verocard':
