fix: 🐛 wrong path to images

--- a/packages/components/Brands/Brands.html
+++ b/packages/components/Brands/Brands.html
@@ -3,8 +3,8 @@
 <script>
   import alelo from './assets/alelo.png'
   import amex from './assets/amex.png'
-  import banescard from 'banescard.png'
-  import benVisaVale from 'ben-visa-vale.png'
+  import banescard from './assets/banescard.png'
+  import benVisaVale from './assets/ben-visa-vale.png'
   import blank from './assets/blank.png'
   import cabal from './assets/cabal.png'
   import cooperCard from './assets/cooper-card.png'
@@ -14,14 +14,14 @@
   import hiper from './assets/hiper.png'
   import hipercard from './assets/hipercard.png'
   import mastercard from './assets/mastercard.png'
-  import redecompras from 'redecompras.png';
+  import redecompras from './assets/redecompras.png';
   import senff from './assets/senff.png'
   import sodexo from './assets/sodexo.png'
   import sorocred from 'sorocred.png';
   import ticket from './assets/ticket.png'
-  import unionpay from 'unionpay.png';
+  import unionpay from './assets/unionpay.png';
   import up from './assets/up.png'
-  import valecard from 'valecard.png';
+  import valecard from './assets/valecard.png';
   import verdecard from './assets/verdecard.png'
   import verocard from './assets/verocard.png'
   import visa from './assets/visa.png'
