feat: 🎸 added Sorocred to Brands

--- a/packages/components/Brands/Brands.html
+++ b/packages/components/Brands/Brands.html
@@ -17,7 +17,7 @@
   import redecompras from './assets/redecompras.png';
   import senff from './assets/senff.png'
   import sodexo from './assets/sodexo.png'
-  import sorocred from 'sorocred.png';
+  import sorocred from './assets/sorocred.png';
   import ticket from './assets/ticket.png'
   import unionpay from './assets/unionpay.png';
   import up from './assets/up.png'
